@@ -28,11 +28,20 @@ public class DamageLogManager extends Manager<String, ConcurrentLinkedDeque<Dama
     private static final Collector<DamageLog, ?, Map<String, List<DamageLog>>> SUMMARY_COLLECTOR =
             Collectors.groupingBy(log -> log.getDamager() != null
                     ? log.getDamager().getName()
-                    : UtilFormat.cleanString(log.getDamageCause().name()));
+                    : log.getDamageCause().getDisplayName());
     
     public void add(Entity damagee, DamageLog damageLog) {
         ConcurrentLinkedDeque<DamageLog> logs = objects.computeIfAbsent(damagee.getUniqueId().toString(), k -> new ConcurrentLinkedDeque<>());
         logs.add(damageLog);
+    }
+
+    public DamageLog getLastDamage(LivingEntity damagee) {
+        ConcurrentLinkedDeque<DamageLog> logQueue = objects.get(damagee.getUniqueId().toString());
+        if (logQueue.isEmpty()) {
+            return null;
+        } else {
+            return logQueue.getLast();
+        }
     }
 
     /**
@@ -84,7 +93,7 @@ public class DamageLogManager extends Manager<String, ConcurrentLinkedDeque<Dama
             component.append(UtilMessage.deserialize("<yellow>%s</yellow>'s Damage Summary:", player.getName()));
 
             logQueue.stream().collect(SUMMARY_COLLECTOR).forEach((source, logs) -> {
-                String cause = UtilFormat.cleanString(logs.get(0).getDamageCause().name());
+                String cause = logs.getFirst().getDamageCause().getDisplayName();
                 final double damage = logs.stream().mapToDouble(DamageLog::getDamage).sum();
                 final double timePrior = logs.stream()
                         .mapToDouble(DamageLog::getTime)
